add global item picker
